--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,47 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.navigation {
+  display: flex;
+  width: 100%;
+  height: 80px;
+  border: solid 1px black;
+  align-items: center;
+  justify-content: space-around;
+  background-color: black;
+}
+
+.navigation ul {
+  display: flex;
+  gap: 40px;
+}
+
+.navigation ul,
+li,
+a {
+  color: white;
+  text-decoration: none;
+  list-style: none;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-size: 12px;
+  transition: ease-in-out 2s;
+}
+
+h1 {
+  text-transform: uppercase;
+  color: white;
+}
+
+.navigation ul,
+li,
+a:hover {
+  color: red;
+}
+
 body {
   padding: 10px;
   font-family: Arial, Helvetica, sans-serif;
@@ -27,7 +71,7 @@ td {
   cursor: default;
 }
 
-div {
+#div-buttons {
   border-radius: 10px;
   width: 100px;
   height: 200px;
@@ -35,8 +79,6 @@ div {
   margin: 0 auto;
   position: relative;
   margin-bottom: 20px;
-}
-.color-div {
   background-color: lightslategrey;
 }
 
